deployments/oidc-mock/oidc-mock-deployment.yaml
# oidc-mock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-mock
  namespace: istio-meshlab
  labels:
    app: oidc-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-mock
  template:
    metadata:
      labels:
        app: oidc-mock
    spec:
      containers:
        - name: oidc-server-mock
          image: nayyaracropsey/jwtmock:latest
          ports:
            - containerPort: 80
