deployments/oidc-mock/oidc-mock-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: oidc-mock-gateway
  namespace: istio-meshlab
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "oidc-mock.local"
